# Ascari

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  ascari.cfg  ascari.kdev4  cppcheck.sh  load_data.m  main.cpp  multiple_sim.py  readme.txt  results.cpp  viewer_replay.cpp
agent/: CMakeLists.txt  agent.cpp  agent.h  agent.kdev4  main.cpp  plugin_module.h  test.sh
agent/automaton/: automatonEFSM.cpp  automatonEFSM.h  automatonFSM.cpp  automatonFSM.h  automatonabstract.h
agent/communication/: agent_communicator.h  agent_communicator_abstract.h  dummy_world_communicator.cpp  dummy_world_communicator.h  shared_agent_communicator.cpp  shared_agent_communicator.h  shared_world_communicator.cpp  shared_world_communicator.h  tcp_agent_communicator.cpp  tcp_agent_communicator.h  tcp_world_communicator.cpp  tcp_world_communicator.h  udp_agent_communicator.cpp  udp_agent_communicator.h  udp_world_communicator.cpp  udp_world_communicator.h  world_communicator.h  world_communicator_abstract.h  zmq_real_world_serial_communicator.cpp  zmq_real_world_serial_communicator.h  zmq_world_communicator.cpp  zmq_world_communicator.h
agent/controller/: controller.cpp  controller.h
agent/decoder/: decoder.cpp  decoder.h
agent/empty_plugin/: empty_plugin.cpp  empty_plugin.h
agent/encoder/: encoder.h  encoderAbstract.h  encoderDet.cpp  encoderDet.h
agent/graph_routing/: agent_router.cpp  agent_router.h  agent_router_utility.cpp  graph_creator.cpp  graph_creator.h  udp_graph_communicator.cpp  udp_graph_communicator.h
agent/identifierModule/: agent_to_dummy_communicator.hpp  dummy_agent.hpp  identifier.h  identifierModule_communicator.hpp  identifier_module.cpp  identifier_module.h  named_semaphore.hpp
agent/task_assignment/: algorithms_utility.cpp  assignment_problem.cpp  assignment_problem.h  bilp_problem.cpp  bilp_problem.h  cost_exchange_algorithm.cpp  dubins.cpp  solution_exchange_algorithm.cpp  subgradient_algorithm.cpp  task_assignment.cpp  task_assignment.h  task_assignment_algorithms.cpp  task_assignment_communicator.h  task_assignment_utility.cpp
agent/topology/: topology.cpp  topology.h
launcher/: CMakeLists.txt  QDebugStream.hpp  launcher.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
plugins/agent_router/: .kdev_include_paths  CMakeLists.txt  agent_router.cpp  agent_router.h  agent_router_logging.cpp  agent_router_logging.h  agent_router_parsed_agent.h  agent_router_parsed_world.h  agent_router_parser_plugin.cpp  agent_router_parser_plugin.h  agent_router_plugin.h  agent_router_plugin_container.h  agent_router_simulator_plugin.cpp  agent_router_simulator_plugin.h  agent_router_utility.cpp  agent_router_viewer.cpp  agent_router_viewer.h  graph_creator.cpp  graph_creator.h  router_memory_communicator.hpp  udp_agent_router.hpp  udp_graph_communicator.cpp  udp_graph_communicator.h
shared/: CMakeLists.txt  baseball.yaml  debug_constants.h  define.cpp  define.h  dynamic.cpp  dynamic.h  dynamic_module_abstract.h  dynamic_remote_localization.cpp  dynamic_remote_localization.h  esempio1.yaml  esempio10.yaml  esempio11.yaml  esempio12.yaml  esempio2.yaml  esempio3.yaml  esempio4.yaml  esempio5.yaml  esempio6.yaml  esempio7.yaml  esempio9.yaml  giocopalla.yaml  global_types.h  lgf_parser.cpp  lgf_parser.h  logog.hpp  named_semaphore.hpp  random.hpp  streams_utils.h  task_assignment_types.h  test2.gml.lgf  typedefs.h  typedefs_topology.h  types.h  yaml_parser.cpp  yaml_parser.h  yaml_parser_cout.cpp
shared/communication/: global.cpp  global.h  memory_communicator.hpp  udp_async_receiver.hpp  udp_receiver.hpp  udp_sender.hpp  zmq_communicator.hpp  zmq_empty_communicator.hpp  zmq_formation_control_communicator.hpp  zmq_full_communicator.hpp  zmq_identifier_communicator.hpp  zmq_localization_communicator.hpp  zmq_nostop_communicator.hpp  zmq_real_world_communicator.hpp  zmq_task_assignment_communicator.hpp
shared/graphs/: basicX.gml  basicx.lgf  loading.gml  loading.gml.lgf  loading1.gml.lgf  museum.gml  museum.gml.lgf  sixway.lgf  test3.gml  test3.gml.lgf  test5.gml  test5.gml.lgf  warehouse.gml  warehouse.lgf
shared/logog/: CMakeLists.txt
shared/objects/: abstract_object.h  objects_container.hpp  router_graph_good.cpp  router_graph_good.h  task_assignment_task.cpp  task_assignment_task.h
shared/parserYAML/: CMakeLists.txt
shared/types/: agent_name_to_ref_states.h  agent_sim_packet.h  agent_simulator_handshake_packet.h  agent_state_packet.h  agents_name_to_states.h  control_command_packet.h  dummy_state.h  empty_packet.h  events.h  graph_informations.h  monitor_packet.h  monitor_result.h  world_sim_packet.h
shared/wykobi/: wykobi_matrix.inl
shared/yaml_checker/: yaml_checker.cpp  yaml_checker.h
shared/yamls/: 1_1_ta.yaml  2_2_ta.yaml  3_3_ta.yaml  baseball.yaml  basicx.yaml  circuit.yaml  demo.yaml  demo2.yaml  demo_dubins.yaml  esempio1.yaml  esempio11.yaml  esempio12.yaml  esempio14.yaml  esempio15.yaml  esempio17.yaml  esempio19.yaml  esempio2.yaml  esempio20.yaml  esempio21.yaml  esempio23.yaml  esempio24-bad.yaml  esempio24.yaml  esempio25.yaml  esempio26.yaml  esempio4.yaml  esempio9.yaml  esempio_real.yaml  fake_real_1.yaml  giocopalla.yaml  max_dist.yaml  nostop_coverage.yaml  obstavoid.yaml  prova_dritto.yaml  real_1.yaml  routerwarehouse1.yaml  routerwarehouse2.yaml  routerwarehousemaxi.yaml  sixway.yaml  (+10 more)
simulator/: CMakeLists.txt  Dynamic_module.cpp  Dynamic_module.h  collisionchecker.cpp  collisionchecker.h  collisioncheckerabstract.h  esempio1.yaml  esempio2.yaml  esempio3.yaml  main.cpp  monsters.yaml  rob_soc.yaml  simulator.cpp  simulator.h  simulator.kdev4
testing/: CMakeLists.txt  fake_agent_for_udp_tester.cpp  fake_localization.cpp  fake_simulator.cpp  fake_simulator.h  main.cpp  testClass.h  testagentudpcommunicator.hpp  testautomaton.hpp  testcontroller.hpp  testdecoder.hpp  testdynamic.hpp  testencoder.hpp  testrandom.hpp  testregex.hpp  testserialize.hpp  testsimulator.hpp  testudpsenderreceiver.hpp  testvisibility.hpp  zmq_agent_communicator.h
viewer/: CMakeLists.txt  osgviewerqt.cpp
yaml_checker/: CMakeLists.txt  main.cpp
(+218 files in other folders)
